syntax = "proto3";

package company;
option go_package = "github.com/yuansuan/ticp/iPaaS/sso/protos/platform/company";

import "google/protobuf/timestamp.proto";
import "protos/platform/ptype/page.proto";

// CompanyService service definition.
service CompanyApplyService {

    rpc Apply (ApplyRequest) returns (CompanyApply) {}

    rpc GetApplyByUser (GetApplyByUserRequest) returns (CompanyApply) {}

    rpc GetAllApplyList (GetAllApplyListRequest) returns (GetAllApplyListResponse) {}
}

// TrialApplyService service definition.
service TrialApplyService {
    // 创建试用申请
    rpc CreateTrailApply (CreateTrialApplyRequest) returns (TrialApply) {}
    // 用户更新试用申请
    rpc UpdateTrailApply (UpdateTrialApplyRequest) returns (TrialApply) {}
    // OMS管理员审核
    rpc AuditTrailApply  (AuditTrailApplyRequest) returns (TrialApply) {}
    // 获取试用申请(Apply_id)
    rpc GetTrailApply (GetTrailApplyRequest) returns (TrialApply) {}
    // 试用申请查询(多条件筛选)
    rpc ListTrailApply (ListTrailApplyRequest) returns (ListTrailApplyResponse) {}

    // 试用信息获取(user_id)           --- 此接口预留company_id 但未启用
    rpc GetTrialInfo (GetTrialInfoRequest) returns (TrialInfo) {}
    // 试用信息查询(多条件查询)
    rpc ListTrialInfo (ListTrialInfoRequest) returns (ListTrialInfoResponse) {}
}

// TrialApplyService service definition.
service InnerTrialService {
    // 内部调用，Job服务调用，触发用量统计
    rpc UpdateTrialInfo (UpdateTrialInfoRequest) returns (TrialInfo) {}
}

// 企业状态
enum CompanyApplyStatus {
    // 未知
    COMPANY_APPLY_UNKNOWN = 0;
    // 申请中
    COMPANY_APPLY_ONDOING = 1;
    // 已完成
    COMPANY_APPLY_COMPLETED = 2;
}

message CompanyApply {
    // 申请id pk 非空
    string apply_id =1;
    // 用户id unique 非空
    string user_id =2;
    // 用户名 可为空
    string user_name = 3;
    // 企业名 可为空
    string company_name = 4;
    // 所属行业 可为空
    string industry = 5;
    // 用户电话，非空
    string phone = 6;
    // 企业规模 默认0
    int64 engineer_num = 7;
    // 需求软件列表
    repeated string software_list = 8;
    // 申请理由
    repeated string apply_reason = 9;
    // 产品id
    string product_id = 10;
    // 申请状态
    CompanyApplyStatus status = 11;
    // 创建时间
    google.protobuf.Timestamp create_time = 12;
    // 更新时间
    google.protobuf.Timestamp update_time = 13;
}

message ApplyRequest {
    // 用户id，必填，申请后自动判断是create 还是 update
    // @inject_tag: `validate:"is_ysid,required"`
    string user_id =1;
    // 企业名 可为空
    string company_name = 2;
    // 所属行业 可为空
    string industry = 3;
    // 需求软件列表 可为空
    repeated string software_list = 4;
    // 申请理由 可为空
    repeated string apply_reason = 5;
    // 公司规模
    int64 engineer_num = 6;
    // 用户名称
    string user_name = 7;
}

message GetApplyByUserRequest {
    // 用户id，必填
    // @inject_tag: `validate:"is_ysid,required"`
    string user_id =1;
}

message GetAllApplyListRequest {
    // 企业名关键字，模糊检索
    string name_keyword =1;
    // 需求软件关键字，模糊检索
    string software_keyword = 2;
    // 申请理由关键字，模糊检索
    string reason_keyword = 3;
    // 所属行业关键字，模糊检索
    string industry_keyword = 4;
    // 最小规模
    int64 min_engineer_num = 5;
    // 最大规模
    int64 max_engineer_num = 6;
    // 创建时间
    google.protobuf.Timestamp start_time = 7;
    // 更新时间
    google.protobuf.Timestamp end_time = 8;
    // 申请状态
    CompanyApplyStatus status = 9;
    // @inject_tag: `validate:"required"`
    ptype.Page page = 10;
}

message GetAllApplyListResponse {
    // 数据列表
    repeated CompanyApply list = 1;
    // @inject_tag: `validate:"required"`
    ptype.PageCtx page_ctx = 2;
}


// 试用申请状态
enum TrialApplyStatus {
    TRAIL_APPLY_UNKNOWN = 0;
    // 用户不关心
    TRAIL_APPLY_USER_APPLY = 1;
    // 用户现在不需要
    TRAIL_APPLY_USER_CANCEL = 2;
    // 用户申请/确认申请，需要OMS客服介入
    TRAIL_APPLY_USER_UNDEFINE = 3;
    // OMS已接入，同意试用，允许 key及type相同试用商品的试用工作
    TRAIL_APPLY_OMS_ACCEPT = 4;
    // OMS拒绝申请，拒绝试用
    TRAIL_APPLY_OMS_REJECT = 5;
    // OMS手动停止试用，场景：发现用户申请信息造假/原厂/第三方要求停止等
    TRAIL_APPLY_OMS_DISABLE = 6;
}

message TrialApply {
    // 申请id pk 
    string id =1;
    // 用户id
    string user_id =2;
    // 企业id
    string company_id = 3;
    // 试用商品类型
    int64 trial_resource_type = 4;
    // 试用商品关键词
    string trial_resource_key = 5;
    // 申请状态
    TrialApplyStatus status = 6;
    // 申请来源
    string apply_source = 7;
    // 自定义备注
    string remark = 8;
    // 产品id
    string product_id = 9;
    // 申请核时
    int64 core_hour = 10;
    // 审核用户名称
    string audit_uname = 11;
    // 审核时间
    google.protobuf.Timestamp audit_time = 13;
    // 申请时间
    google.protobuf.Timestamp create_time = 14;
    // 更新时间
    google.protobuf.Timestamp update_time = 15;
}

message TrialInfo {
    // 用户id
    string user_id = 1;
    // 用户名称
    string user_name = 2;

    // NOT USE！ TODO！ 预留字段，返回空
    string company_id = 3;
    // NOT USE！ TODO！ 预留字段，返回空
    string company_name = 4;

    // 用户手机号
    string phone = 5;

    // 总可用核时数
    double total_avaliable_corehour = 6;
    // 已用总核时数
    double used_corehour = 7;
    // 剩余核时数 = total_avaliable_corehour - used_corehour
    double remain_corehour = 8;

    string product_id = 9;

    // 试用商品类型
    int64 trial_resource_type = 10;
    // 试用商品关键词
    string trial_resource_key = 11;
}

message CreateTrialApplyRequest {
    // @inject_tag: `validate:"is_ysid,required"`
    string user_id =1;
    // 企业id 可为空
    string company_id = 2;
    // 产品id 可为空
    // @inject_tag: `validate:"required"`
    int64 trial_resource_type = 3;
    // 试用商品关键词 非空
    // @inject_tag: `validate:"required"`
    string trial_resource_key = 4;
    // 申请状态 only allow USER_APPLY USER_CANCEL USER_UNDEFINE
    TrialApplyStatus status = 5;
    // 申请渠道
    string apply_source = 6;
    // product
    string product_id = 7;
    // 标记可为空
    string remark = 8;
}

message UpdateTrialApplyRequest {
    // 申请id pk 非空
    // @inject_tag: `validate:"is_ysid,required"`
    string apply_id =1;
    // 申请状态 only allow USER_APPLY USER_CANCEL USER_UNDEFINE
    TrialApplyStatus status = 2;
    // 标记可为空
    string remark = 3;
    // 创建时间
}

message AuditTrailApplyRequest {
    // 申请id pk 非空
    // @inject_tag: `validate:"is_ysid,required"`
    string apply_id =1;
    // 申请状态 only allow OMS_ACCEPT OMS_REJECT OMS_DISABLE
    TrialApplyStatus status = 2;
    // 标记可为空
    string remark = 3;
    // 处理人uid
    string audit_uname = 4;
}

message GetTrailApplyRequest {
    // 申请id pk 非空
    // @inject_tag: `validate:"is_ysid,required"`
    string apply_id =1;
}

message ListTrailApplyRequest {
   // 申请状态
   string user_id = 1;
   // 用户关键词，包括user_id与phone
   string user_key = 2;
   // 试用商品类型 非空
   int64 trial_resource_type = 3;
   // 试用商品关键词 非空
   string trial_resource_key = 4;
   // 申请状态
   string product_id = 5;
   // 试用商品type 可为空
   string company_id = 6;
   // 申请状态
   repeated TrialApplyStatus status = 7;
   // 标记可为空
   string remark_key = 8;
   // 申请来源
   string apply_source = 9;
   // @inject_tag: `validate:"required"`
   ptype.Page page = 10;
}

message ListTrailApplyResponse {
    // 数据列表
    repeated TrialApply list = 1;
    // @inject_tag: `validate:"required"`
    ptype.PageCtx page_ctx = 2;
}

// GetTrialJobListReply returns the job list information and total number
message GetTrialInfoRequest {
    // The job list information
    // @inject_tag: `validate:"is_ysid,required"`
    string user_id = 1;
}

// GetTrialJobListReply returns the job list information and total number
message UpdateTrialInfoRequest {
    // The job list information
    // @inject_tag: `validate:"is_ysid,required"`
    string user_id = 1;
}

// GetTrialJobListReply returns the job list information and total number
message ListTrialInfoRequest {
    // 用户关键词，包括user_id与phone
    string user_key = 1;
    // @inject_tag: `validate:"required"`
    ptype.Page page = 2;
}

// GetTrialJobListReply returns the job list information and total number
message ListTrialInfoResponse {
    // 数据列表
    repeated TrialInfo list = 1;
    // @inject_tag: `validate:"required"`
    ptype.PageCtx page_ctx = 2;
}
